@@ -328,7 +328,7 @@ $I=array(
 	'fatalerror' => 'Fatal error',
 	'prevmatch' => 'Your match was as follows',
 	'matchtoolong' => 'Your match was too long. You can use max. 255 characters. Try splitting it up.',
-	'nocache' => 'Add refresh hack for old browsers.<br>Enable, if refreshing doesn\'t work.',
+	'nocache' => 'Add refresh hack for old browsers.<br>Enable, if refreshing doesn\'t work or<br>for autoscrolling when sorting messages top to bottom.',
 	'disablepm' => 'Disable private messages',
 	'disablechat' => 'Disable chat',
 	'disabletext' => 'Chat disabled message (html)',
@@ -355,5 +355,6 @@ $I=array(
 	'enablegreeting' => 'Show a greeting message before showing the messages',
 	'unban' => 'Unban',
 	'sortupdown' => 'Sort messages from top to bottom',
+	'sortframe' => 'Sort frames',
 );
 ?>
